gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: hung16/microshop-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: microshop
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
