microshop.yml
apiVersion: v1
kind: Namespace
metadata:
  name: microshop

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: microshop
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: hung16/microshop-auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microshop
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 3001
      targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: hung16/microshop-product-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: microshop
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - port: 3002
      targetPort: 3002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: hung16/microshop-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: microshop
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: microshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: hung16/microshop-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microshop
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32080
