ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microshop-ingress
  namespace: microshop
spec:
  ingressClassName: traefik
  rules:
    - host: microshop.103.77.243.58.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
